// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slider labels should not render labels by default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

<div
    class="emotion-0"
  >
    <div>
      react-range
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render custom component min, max labels 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-right: 8px;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-left: 8px;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      <span>
        0
      </span>
    </div>
    <div>
      react-range
    </div>
    <div
      class="emotion-1"
      data-testid="max-label"
    >
      <span>
        100
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render horizontal labels 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-right: 8px;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-left: 8px;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      0
    </div>
    <div>
      react-range
    </div>
    <div
      class="emotion-1"
      data-testid="max-label"
    >
      100
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render max label 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-left: 8px;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<div
    class="emotion-1"
  >
    <div>
      react-range
    </div>
    <div
      class="emotion-0"
      data-testid="max-label"
    >
      0
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render min label 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-right: 8px;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<div
    class="emotion-1"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      0
    </div>
    <div>
      react-range
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render vertical labels 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 32px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-top: 8px;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-bottom: 8px;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      0
    </div>
    <div>
      react-range
    </div>
    <div
      class="emotion-1"
      data-testid="max-label"
    >
      100
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render custom aria-label slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    aria-label="my custom aria label"
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render custom label component slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    aria-label="slider"
    class="emotion-0"
  >
    <span />
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render dragged slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    aria-label="slider"
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render multiple index slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    aria-label="slider"
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render range label slider thumb 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-1:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-1:disabled {
  background-color: #f0f0f0;
}

.emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  border-radius: 100vw;
  top: -32px;
  position: absolute;
  background-color: transparent;
  white-space: nowrap;
  width: 100%;
  text-align: center;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:active:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      25
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render undragged slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    aria-label="slider"
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render vertical slider thumb 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-1:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-1:disabled {
  background-color: #f0f0f0;
}

.emotion-0 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  border-radius: 100vw;
  right: -40px;
  position: absolute;
  background-color: transparent;
  white-space: nowrap;
  width: 100%;
  text-align: center;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:active:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      25
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render default slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: pointer;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render disabled slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #f0f0f0;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: not-allowed;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    disabled=""
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render disabled slider track 2`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #f0f0f0;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: not-allowed;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    disabled=""
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render grabbed slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render multi-thumb slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: inherit;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="10,20"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render vertical slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 16px 0;
  cursor: pointer;
  height: 100%;
  width: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;
